trunk/Archive2/29/bf57b82c64c0ee/output
main.cpp:23:8: error: no unique final overrider for 'virtual void A::f()' in 'D'
 struct D:  public B,   public C{
        ^
main.cpp: In function 'int main()':
main.cpp:32:12: warning: deleting object of polymorphic class type 'D' which has non-virtual destructor might cause undefined behaviour [-Wdelete-non-virtual-dtor]
     delete d;
            ^
